--- a/mobile/aboutus.html
+++ b/mobile/aboutus.html
@@ -13,8 +13,8 @@
 <body onselectstart="return false" oncontextmenu="window.event.returnValue=false" onpaste="return false;" oncopy="return false;" oncut="return false;">
     <!-- 导航 -->
     <div class="my_nav">
-    <a class="weixin" href="javascript:history.go(-1);">
-        <img src="./image/goback.png"/>
+    <a class="weixin" href="./index.html">
+        <img src="./image/home.png"/>
     </a>
 
     <div class="logo">
@@ -24,7 +24,7 @@
     </div>
 
 
-    <a class="account" href="./login.html">
+    <a class="account" href="wi-pro/login.html">
         <img  src="./image/account.png"/>
     </a>
 </div>
@@ -34,7 +34,10 @@
 
 
         <div class="discreption">
-            <div>幸福创客，专注心理健康科技领域。</div>
+            <div>幸福创客，专注智能心理健康科技领域。</div>
+            <div class="oneline">
+                我们是全球第一家提供智能身心健康服务的移动互联网公司，拥有最崭新的人工智能和机器学习技术，以及最庞大的国际心理学和医学专家，可以精準的為所有人提供最个性化和最专业的身心健康相关服务，解决任何心理需求，达致为人类打造更幸福、更健康生活的使命。
+                </div>
             <div class="oneline">创客是指一群酷爱科技，热衷实践，
                 以追求极致的知识技术来改变世界的人；
                 幸福创客是一个平台，
@@ -148,6 +151,20 @@
         </ul>
 
 
+
+        <div style="text-align: center">
+            <a href="./learnmore.html">
+                <img src="./image/tuandui_button.png"  style="width: 30%;" />
+            </a>
+            <a href="./wi-matt.html">
+                <img src="./image/zhuanjia_button.png"  style="width: 30%;"/>
+            </a>
+            <a href="./csr.html">
+                <img src="./image/gongyiweiyuanhui_button.png" style="width: 30%;" />
+            </a>
+
+
+        </div>
         <!-- 分享 -->
         <div class="share-blank">
         <div class="share ">
@@ -194,19 +211,19 @@
                 </li>
                 <li class="footer_navbar_li">
                     <img src="./image/welcome-blue.png"/>
-                    <a class="left" href="./shehuizeren.html">
+                    <a class="left" href="csr.html">
                         <span class="text-blue">社会责任</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
-                    <a  class="right" href="./meitijieshao.html">
+                    <a  class="right" href="media.html">
                         <img src="./image/meitijieshao-blue.png"/>
                         <span class="text-blue">媒体介绍</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
                     <img src="./image/lianluowomen-blue.png"/>
-                    <a class="left" href="./lianxiwomen.html">
+                    <a class="left" href="contactus.html">
                         <span class="text-blue">联络我们</span>
                     </a>
                 </li>
