--- a/mobile/ai-robot.html
+++ b/mobile/ai-robot.html
@@ -16,8 +16,8 @@
 <body onselectstart="return false" oncontextmenu="window.event.returnValue=false" onpaste="return false;" oncopy="return false;" oncut="return false;">
 <!-- 导航 -->
 <div class="my_nav">
-    <a class="weixin" href="javascript:history.go(-1);">
-        <img src="./image/goback.png"/>
+    <a class="weixin" href="./index.html">
+        <img src="./image/home.png"/>
     </a>
 
     <div class="logo">
@@ -27,7 +27,7 @@
     </div>
 
 
-    <a class="account" href="./login.html">
+    <a class="account" href="wi-pro/login.html">
         <img  src="./image/account.png"/>
     </a>
 </div>
@@ -81,7 +81,7 @@
     </div>
 
     <div style="text-align: center; margin-bottom: 20px">
-        <a style="text-decoration: none;" class="qiyeshiyong" href="./lianxiwomen.html">
+        <a style="text-decoration: none;" class="qiyeshiyong" href="contactus.html">
             <div  class="my_button">
                 查询Ai-Robot</div>
 
@@ -138,19 +138,19 @@
             </li>
             <li class="footer_navbar_li">
                 <img src="./image/welcome-blue.png"/>
-                <a class="left" href="./shehuizeren.html">
+                <a class="left" href="csr.html">
                     <span class="text-blue">社会责任</span>
                 </a>
             </li>
             <li class="footer_navbar_li">
-                <a  class="right" href="./meitijieshao.html">
+                <a  class="right" href="media.html">
                     <img src="./image/meitijieshao-blue.png"/>
                     <span class="text-blue">媒体介绍</span>
                 </a>
             </li>
             <li class="footer_navbar_li">
                 <img src="./image/lianluowomen-blue.png"/>
-                <a class="left" href="./lianxiwomen.html">
+                <a class="left" href="contactus.html">
                     <span class="text-blue">联络我们</span>
                 </a>
             </li>
