--- a/mobile/chanpinfuwu.html
+++ b/mobile/chanpinfuwu.html
@@ -14,8 +14,8 @@
 
 <!-- 导航 -->
 <div class="my_nav">
-    <a class="weixin" href="javascript:history.go(-1);">
-        <img src="./image/goback.png"/>
+    <a class="weixin" href="./index.html">
+        <img src="./image/home.png"/>
     </a>
 
     <div class="logo">
@@ -25,7 +25,7 @@
     </div>
 
 
-    <a class="account" href="./login.html">
+    <a class="account" href="wi-pro/login.html">
         <img  src="./image/account.png"/>
     </a>
 </div>
@@ -115,19 +115,19 @@
             </li>
             <li class="footer_navbar_li">
                 <img src="./image/welcome.png"/>
-                <a class="left" href="./shehuizeren.html">
+                <a class="left" href="csr.html">
                     <span class="text">社会责任</span>
                 </a>
             </li>
             <li class="footer_navbar_li">
-                <a  class="right" href="./meitijieshao.html">
+                <a  class="right" href="media.html">
                     <img src="./image/meitijieshao.png"/>
                     <span class="text">媒体介绍</span>
                 </a>
             </li>
             <li class="footer_navbar_li">
                 <img src="./image/lianluowomen.png"/>
-                <a class="left" href="./lianxiwomen.html">
+                <a class="left" href="contactus.html">
                     <span class="text">联络我们</span>
                 </a>
             </li>
