--- a/mobile/csr.html
+++ b/mobile/csr.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html itemscope="itemscope" itemtype="http://schema.org/Product" lang="en">
 <head>
-    <title>首页 - 幸福创客</title>
+    <title>企业社会责任 - 幸福创客</title>
     <meta content="结合知识与科技,为人类打造更幸福、更健康的生活。"
           name="description"/>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
@@ -14,8 +14,8 @@
 
 <!-- 导航 -->
 <div class="my_nav">
-    <a class="weixin" href="javascript:history.go(-1);">
-        <img src="./image/goback.png"/>
+    <a class="weixin" href="./index.html">
+        <img src="./image/home.png"/>
     </a>
 
     <div class="logo">
@@ -25,7 +25,7 @@
     </div>
 
 
-    <a class="account" href="./login.html">
+    <a class="account" href="wi-pro/login.html">
         <img  src="./image/account.png"/>
     </a>
 </div>
@@ -43,6 +43,20 @@
                 能为这世界做点什么，是我们常常思考的问题</span><br>
 
             <span>现在我们能力还很有限，<br>但我们相信每一分力量和付出都可以令这个我们生活的地方变得更美好</span><br>
+        </div>
+
+        <div class="shehuizeren_info">
+            <img src="./image/shehuizeren0.png"/><br/>
+            <span>公益委员会</span>
+            <div class="shehuizeren_content">
+                <div style="border-left-color: #a2d435">
+                    公益委员会负责设计并监测我们社会责任的发展与落实。
+                </div>
+                <div style="border-left-color: #a2d435">
+                    公益委员会成员包括：
+                </div>
+            </div>
+
         </div>
 
         <div class="shehuizeren_info">
@@ -136,19 +150,19 @@
                 </li>
                 <li class="footer_navbar_li">
                     <img src="./image/welcome-blue.png"/>
-                    <a class="left" href="./shehuizeren.html">
+                    <a class="left" href="./csr.html">
                         <span class="text-blue">社会责任</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
-                    <a  class="right" href="./meitijieshao.html">
+                    <a  class="right" href="media.html">
                         <img src="./image/meitijieshao-blue.png"/>
                         <span class="text-blue">媒体介绍</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
                     <img src="./image/lianluowomen-blue.png"/>
-                    <a class="left" href="./lianxiwomen.html">
+                    <a class="left" href="contactus.html">
                         <span class="text-blue">联络我们</span>
                     </a>
                 </li>
