--- a/mobile/index.html
+++ b/mobile/index.html
@@ -15,9 +15,9 @@
 
     <!-- 导航 -->
     <div class="my_nav">
-        <!--<a class="weixin" href="javascript:history.go(-1);">-->
-            <!--<img src="./image/goback.png"/>-->
-        <!--</a>-->
+        <a class="weixin" href="./index.html">
+            <img src="./image/home.png"/>
+        </a>
 
         <div class="logo">
             <a href="./index.html">
@@ -26,7 +26,7 @@
         </div>
 
 
-        <a class="account" href="./login.html">
+        <a class="account" href="wi-pro/login.html">
             <img  src="./image/account.png"/>
         </a>
     </div>
@@ -49,13 +49,13 @@
                 <!--</a>-->
             <!--</li>-->
             <!--<li>-->
-                <!--<a href="./zhuanjia.html">-->
+                <!--<a href="./wi-matt.html">-->
                     <!--<img src="./image/team.png">-->
                     <!--<span>专家库</span>-->
                 <!--</a>-->
             <!--</li>-->
             <!--<li>-->
-                <!--<a href="shehuizeren.html">-->
+                <!--<a href="csr.html">-->
                     <!--<img src="./image/welcome.png">-->
                     <!--<span style="">社会责任</span>-->
                 <!--</a>-->
@@ -63,16 +63,16 @@
         <!--</ul>-->
 
         <div class="index">
-            <a href="./used.html">
+            <a href="wi-pro.html">
                 <img class="info_img" src="./image/1.jpg"/>
             </a>
-            <a href="./zhuanjia.html">
+            <a href="wi-matt.html">
                 <img class="info_img" src="./image/2.jpg"/>
             </a>
-            <a href="./airobot.html">
+            <a href="ai-robot.html">
                 <img class="info_img" src="./image/3.jpg"/>
             </a>
-            <a href="./ourteam.html">
+            <a href="learnmore.html">
                 <img class="info_img" src="./image/4.jpg"/>
             </a>
             <a href="./welcome.html ">
@@ -126,19 +126,19 @@
                 </li>
                 <li class="footer_navbar_li">
                     <img src="./image/welcome-blue.png"/>
-                    <a class="left" href="./shehuizeren.html">
+                    <a class="left" href="csr.html">
                         <span class="text-blue">社会责任</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
-                    <a  class="right" href="./meitijieshao.html">
+                    <a  class="right" href="media.html">
                         <img src="./image/meitijieshao-blue.png"/>
                         <span class="text-blue">媒体介绍</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
                     <img src="./image/lianluowomen-blue.png"/>
-                    <a class="left" href="./lianxiwomen.html">
+                    <a class="left" href="contactus.html">
                         <span class="text-blue">联络我们</span>
                     </a>
                 </li>
