--- a/mobile/meitijieshao/qiyeyingxiangli.html
+++ b/mobile/meitijieshao/qiyeyingxiangli.html
@@ -14,8 +14,8 @@
 
 <!-- 导航 -->
 <div class="my_nav">
-    <a class="weixin" href="javascript:history.go(-1);">
-    <img src="./image/goback.png"/>
+    <a class="weixin" href="./index.html">
+    <img src="./image/home.png"/>
     </a>
 
     <div class="logo">
@@ -25,7 +25,7 @@
     </div>
 
 
-    <a class="account" href="../login.html">
+    <a class="account" href="../wi-pro/login.html">
         <img  src="../image/account.png"/>
     </a>
 </div>
@@ -96,7 +96,7 @@
                 </li>
                 <li class="footer_navbar_li">
                     <img src="../image/lianluowomen-blue.png"/>
-                    <a class="left" href="../lianxiwomen.html">
+                    <a class="left" href="../contactus.html">
                         <span class="text-blue">联络我们</span>
                     </a>
                 </li>
