--- a/mobile/wi-matt.html
+++ b/mobile/wi-matt.html
@@ -16,8 +16,8 @@
 
 <!-- 导航 -->
 <div class="my_nav">
-    <a class="weixin" href="javascript:history.go(-1);">
-    <img src="./image/goback.png"/>
+    <a class="weixin" href="./index.html">
+    <img src="./image/home.png"/>
     </a>
 
     <div class="logo">
@@ -27,7 +27,7 @@
     </div>
 
 
-    <a class="account" href="./login.html">
+    <a class="account" href="wi-pro/login.html">
         <img  src="./image/account.png"/>
     </a>
 </div>
@@ -83,7 +83,7 @@
                 <img src="image/richard.png"/>
                 <div class="expert_info">
                     <div>Richard Layard 勋爵</div>
-                    <div>伦敦政治经济学院教授、英国前首相布莱尔的首席顾问，提出“快乐经济学”理论<div>
+                    <div>伦敦政治经济学院教授、英国前首相布莱尔的首席顾问，提出“快乐经济学”理论</div>
                     <div>“A happiness lesson from a new science”</div>
                 </div>
             </li>
@@ -99,7 +99,7 @@
 
         <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
             我们的平台除了来自全球华人积极心理学会（GCPPA）的数百位世界各地的华人心理学家，还有医学、神经科学、哲学、经济学和管理学等跨领域专家共同致力于提高幸福科学的发展。无论在科研还是职业的道路上，我们深深体会各界专家及从业者通过专业知识和职业操守让更多人得到健康和幸福的同时，所面对的压力、孤独和挑战。因此，我们开发了“Wi-Matt”（创客汇）
-            <span class=" show_more">，一个让全世界专家们严肃学习、轻松交流的专业社区分享平台，希望让所有为幸福科学努力的同仁带来便利和幸福。</span>
+            <span class=" show_more">，一个免费的实名制专家社区，让全世界专家们可以提供专业服务，同时能严肃学习、轻松交流的平台，希望让所有为幸福科学努力的同仁带来便利和幸福。</span>
             <span class=" hide_more">......</span>
         </div>
 
@@ -145,7 +145,7 @@
         </div>
 
         <div style="text-align: center; margin-bottom: 20px">
-            <a style="text-decoration: none;" class="qiyeshiyong" href="./login.html">
+            <a style="text-decoration: none;" class="qiyeshiyong" href="wi-pro/login.html">
                 <div  class="my_button">
                     专家登录</div>
             </a>
@@ -436,19 +436,19 @@
                 </li>
                 <li class="footer_navbar_li">
                     <img src="./image/welcome-blue.png"/>
-                    <a class="left" href="./shehuizeren.html">
+                    <a class="left" href="csr.html">
                         <span class="text-blue">社会责任</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
-                    <a  class="right" href="./meitijieshao.html">
+                    <a  class="right" href="media.html">
                         <img src="./image/meitijieshao-blue.png"/>
                         <span class="text-blue">媒体介绍</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
                     <img src="./image/lianluowomen-blue.png"/>
-                    <a class="left" href="./lianxiwomen.html">
+                    <a class="left" href="contactus.html">
                         <span class="text-blue">联络我们</span>
                     </a>
                 </li>
