--- a/mobile/wi-pro.html
+++ b/mobile/wi-pro.html
@@ -13,8 +13,8 @@
 <body onselectstart="return false" oncontextmenu="window.event.returnValue=false" onpaste="return false;" oncopy="return false;" oncut="return false;">
 <!-- 导航 -->
 <div class="my_nav">
-    <a class="weixin" href="javascript:history.go(-1);">
-        <img src="./image/goback.png"/>
+    <a class="weixin" href="./index.html">
+        <img src="./image/home.png"/>
     </a>
 
     <div class="logo">
@@ -24,7 +24,7 @@
     </div>
 
 
-    <a class="account" href="./login.html">
+    <a class="account" href="wi-pro/login.html">
         <img  src="./image/account.png"/>
     </a>
 </div>
@@ -34,7 +34,7 @@
 
 
         <div class="vip-made" style="font-size: 14px; margin: 10px;">
-            <p class="oneline" style="margin-bottom: 25px">"Wi-PRO"，是幸福创客和剑桥大学幸福研究院共同开发，为企业提供的专业个性化服务，协助企业全方位地提高员工身心健康和幸福力，从而增加企业整体的工作效率，节省成本，保障企业和员工健康发展。无论是面向创业公司、中小企业，还是世界五百强公司，我们都将打破传统的昂贵收费模式，并以推陈出新的技术及智能化的专业服务，认真地为企业提供更全面、更精准、更便捷的合理化订制方案。
+            <p class="oneline" style="margin-bottom: 25px">"Wi-PRO"，是幸福创客和剑桥大学幸福研究院共同开发，为企业每一位员工提供的专业个性化服务，协助企业全方位地提高员工身心健康和幸福力，从而增加企业整体的工作效率，节省成本，保障企业和员工健康发展。无论是面向创业公司、中小企业，还是世界五百强公司，我们都将打破传统的昂贵收费模式，并以推陈出新的技术及智能化的专业服务，认真地为企业提供更全面、更精准、更便捷的合理化订制方案。
             </p>
             <p style="margin-top: 20px">我们团队成员负责的部分案例:</p>
             <!-- 各个使用案例 -->
@@ -142,32 +142,8 @@
             </div>
 
             <p class="oneline" style="margin-bottom: 25px">我们拥有世界级的心理科学专家和高素质的服务团队，建立了与国际保持同步的企业心理健康服务标准，透过先进的通讯、移动互联网和人工智能技术，致力为所有员工及其家属提供最专业丶最贴心的服务，协助企业维护员工的幸福与健康。
+            </p>
 
-            </p><p style="margin-bottom: 25px">服务内容：
-        </p>
-            <p> &nbsp; &nbsp; &nbsp; &nbsp;心理测验及行为预测
-
-            </p><p> &nbsp; &nbsp; &nbsp; &nbsp;身心评估和提升方案
-
-        </p><p> &nbsp; &nbsp; &nbsp; &nbsp;365*24小时全球心理健康帮助
-
-        </p><p> &nbsp; &nbsp; &nbsp; &nbsp;专家心理问答
-
-        </p><p> &nbsp; &nbsp; &nbsp; &nbsp;1对1心理关怀倾诉
-
-        </p><p> &nbsp; &nbsp; &nbsp; &nbsp;O2O员工心理课程
-
-        </p><p> &nbsp; &nbsp; &nbsp; &nbsp;线上自助疏导心理问题
-
-        </p><p> &nbsp; &nbsp; &nbsp; &nbsp;危机心理智能干预
-
-        </p><p> &nbsp; &nbsp; &nbsp; &nbsp;领导力与团队心智发展
-
-        </p><p> &nbsp; &nbsp; &nbsp; &nbsp;变革管理
-
-        </p><p> &nbsp; &nbsp; &nbsp; &nbsp;组织综合优化咨询
-        </p><p> &nbsp; &nbsp; &nbsp; &nbsp;企业社会责任发展
-        </p>
 
         </div>
 
@@ -220,19 +196,19 @@
                 </li>
                 <li class="footer_navbar_li">
                     <img src="./image/welcome-blue.png"/>
-                    <a class="left" href="./shehuizeren.html">
+                    <a class="left" href="csr.html">
                         <span class="text-blue">社会责任</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
-                    <a  class="right" href="./meitijieshao.html">
+                    <a  class="right" href="media.html">
                         <img src="./image/meitijieshao-blue.png"/>
                         <span class="text-blue">媒体介绍</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
                     <img src="./image/lianluowomen-blue.png"/>
-                    <a class="left" href="./lianxiwomen.html">
+                    <a class="left" href="contactus.html">
                         <span class="text-blue">联络我们</span>
                     </a>
                 </li>
