--- a/mobile/index.html
+++ b/mobile/index.html
@@ -75,7 +75,7 @@
             <a href="learnmore.html">
                 <img class="info_img" src="./image/4.jpg"/>
             </a>
-            <a href="./welcome.html ">
+            <a href="contactus.html ">
                 <img class="info_img" src="./image/5.jpg"/>
             </a>
         </div>
