--- a/mobile/learnmore.html
+++ b/mobile/learnmore.html
@@ -356,6 +356,6 @@
         <!--<div id="responsive_example" class="imageHolder text-left"> <div style="position: relative; -webkit-user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); touch-action: none; height: 196px; width: 401px;"><div style="position:absolute: top:0px; left:0px; width:100%; height:100%;"><div style="position: absolute; width: 100%; height: 100%; overflow: hidden; -webkit-user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); touch-action: none;"><img style="position: absolute; max-width: none; display: block; visibility: inherit; opacity: 1; -webkit-user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); touch-action: none; transform-origin: 0px 0px 0px; top: 0px; left: 0px; height: 196px; width: 401px; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, -0.002, 0, 0, 0, 1);" src="./ima"></div></div><div class="zoomInOn" style="-webkit-user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); touch-action: none; visibility: hidden;"></div><div class="zoomOutOff" style="-webkit-user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); touch-action: none; visibility: hidden;"></div></div> </div>-->
     <!--</div>-->
 <!--</div>-->
-
+<script type="text/javascript" src="./js/my_share.js"></script>
 </body>
 </html>
