--- a/mobile/csr.html
+++ b/mobile/csr.html
@@ -42,7 +42,7 @@
             <span>我们每一位成员都有一颗热爱公益的心<br>
                 能为这世界做点什么，是我们常常思考的问题</span><br>
 
-            <span>现在我们能力还很有限，<br>但我们相信每一分力量和付出都可以令这个我们生活的地方变得更美好</span><br>
+            <span>我们相信每一分力量和付出都可以令这个我们生活的地方变得更美好</span><br>
         </div>
 
         <div class="shehuizeren_info">
@@ -50,10 +50,7 @@
             <span>公益委员会</span>
             <div class="shehuizeren_content">
                 <div style="border-left-color: #a2d435">
-                    公益委员会负责设计并监测我们社会责任的发展与落实。
-                </div>
-                <div style="border-left-color: #a2d435">
-                    公益委员会成员包括：
+                    公益委员会负责设计并监测我们社会责任的发展与落实。公益委员会成员包括：
                 </div>
             </div>
 
@@ -74,7 +71,7 @@
             <span>PEER毅恒挚友的亲密伙伴</span>
             <div class="shehuizeren_content">
                 <div style="border-left-color: #00CB3D">
-                    我们邀请了PEER的理事长加入幸福创客的公益委员会，与PEER一起在中国致力于促进中国城乡教育公平、改善中国欠发达地区教育资源。未来，幸福创客将更多参与学生心理健康和积极情绪的项目。
+                    我们与PEER毅恒挚友一起在中国致力于促进中国城乡教育公平、改善中国欠发达地区教育资源。未来，幸福创客将更多参与学生心理健康和积极情绪的项目。
                 </div>
             </div>
 
