--- a/mobile/wi-matt.html
+++ b/mobile/wi-matt.html
@@ -107,19 +107,19 @@
             Wi-Matt是winnovator matters的意思，在Wi-Matt，专家们可以得到：
         </div>
         <div class="oneline show_more" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
-            &nbsp; &nbsp; &nbsp; 1. 为大型企事业单位和机构提供有偿服务的机会（包括咨询、顾问、教练、研究、培训、演讲等）
+            1. 为大型企事业单位和机构提供有偿服务的机会（包括咨询、顾问、教练、研究、培训、演讲等）
         </div>
         <div class="oneline show_more" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
-            &nbsp; &nbsp; &nbsp; 2. 提高知名度和美誉度，以及与媒体联络的通道，以使专家们更能专注于自己的专业
+            2. 提高知名度和美誉度，以及与媒体联络的通道，以使专家们更能专注于自己的专业
         </div>
         <div class="oneline show_more" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
-            &nbsp; &nbsp; &nbsp; 3. 与同业者联系或者跨界合作的社交平台
+            3. 与同业者联系或者跨界合作的社交平台
         </div>
         <div class="oneline show_more" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
-            &nbsp; &nbsp; &nbsp; 4. 展示他们在自己领域的洞见或者科研成果的发表
+            4. 展示他们在自己领域的洞见或者科研成果的发表
         </div>
         <div class="oneline show_more" style="margin-left: 10px;margin-right: 10px;margin-top: 5px;margin-bottom: 0px; font-size: 12px;">
-            &nbsp; &nbsp; &nbsp; 5. 鼓励大家提供专业领域信息交流、互动学习和个人资源增值的分享社区
+            5. 鼓励大家提供专业领域信息交流、互动学习和个人资源增值的分享社区
         </div>
 
         <div class="oneline show_more" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
