--- a/mobile/index.html
+++ b/mobile/index.html
@@ -138,7 +138,7 @@
                 </li>
                 <li class="footer_navbar_li">
                     <img src="./image/lianluowomen-blue.png"/>
-                    <a class="left" href="contactus.html">
+                    <a class="left" href="joinus.html">
                         <span class="text-blue">联络我们</span>
                     </a>
                 </li>
