--- a/mobile/index.html
+++ b/mobile/index.html
@@ -75,7 +75,7 @@
             <a href="learnmore.html">
                 <img class="info_img" src="./image/4.jpg"/>
             </a>
-            <a href="contactus.html ">
+            <a href="joinus.html ">
                 <img class="info_img" src="./image/5.jpg"/>
             </a>
         </div>
@@ -138,7 +138,7 @@
                 </li>
                 <li class="footer_navbar_li">
                     <img src="./image/lianluowomen-blue.png"/>
-                    <a class="left" href="joinus.html">
+                    <a class="left" href="contactus.html">
                         <span class="text-blue">联络我们</span>
                     </a>
                 </li>
