--- a/mobile/learnmore.html
+++ b/mobile/learnmore.html
@@ -119,7 +119,29 @@
             <span>打造一个世界品牌</span><br>
         </div>
 
-        <div style="background-color: white;">
+
+        <div style="margin-top: 30px;text-align: center;font-size: 15px">
+            <b>我们的专家来自</b>
+        </div>
+        <div style="margin-top: -2px;margin-top: 10px;">
+            <img class="info_img" src="./image/shijiegaoxiao.jpg">
+        </div>
+        <!--<div style="margin-top: -2px;margin-top: 20px;">-->
+            <!--<img class="info_img" src="./image/hexintuandui2.jpg">-->
+        <!--</div>-->
+
+
+        <div class="chanpinfuwu_info">
+            <h3>顶尖的国际资源及合作平台</h3>
+            <span>连结、开放、分享全球专业与资源</span><br>
+            <span>具有共赢心态与世界合作伙伴共享行业成长</span><br>
+            <span>汇聚各地一流的精英</span><br>
+            <span>只为了</span><br>
+            <span>团结让世界更美好的力量</span><br>
+
+        </div>
+
+        <div style="background-color: white;margin-top: -30px;">
             <img class="info_img" src="./image/hexintuandui1.jpg">
         </div>
 
@@ -133,19 +155,6 @@
 
         </div>
 
-        <div style="margin-top: -2px">
-            <img class="info_img" src="./image/hexintuandui2.jpg">
-        </div>
-
-        <div class="chanpinfuwu_info">
-            <h3>顶尖的国际资源及合作平台</h3>
-            <span>连结、开放、分享全球专业与资源</span><br>
-            <span>具有共赢心态与世界合作伙伴共享行业成长</span><br>
-            <span>汇聚各地一流的精英</span><br>
-            <span>只为了</span><br>
-            <span>团结让世界更美好的力量</span><br>
-
-        </div>
         <img src="./image/hexintuandui3.jpg"/>
 
         <div class="chanpinfuwu_info">
