--- a/mobile/media.html
+++ b/mobile/media.html
@@ -173,7 +173,7 @@
                     “最科学”幸福感量表已被英国使用</a></div>
             </div>
             <div class="one_meiti">
-                <div class="one_meiti_img">  <img style="width: 70%; height: 70%;" src="./image/yunduan.png"/></div>
+                <div class="one_meiti_img">  <img style="width: 40px; height: 40px;" src="./image/yunduan.png"/></div>
                 <div class="one_meiti_date">2015-03-04</div>
                 <div class="one_meiti_content"><a href="./meitijieshao/yunduan.html">
                     苏德中：如果幸福感也能玩起来</a></div>
