--- a/mobile/meitijieshao/xingfudeganwu.html
+++ b/mobile/meitijieshao/xingfudeganwu.html
@@ -14,8 +14,8 @@
 
 <!-- 导航 -->
 <div class="my_nav">
-    <a class="weixin" href="./index.html">
-        <img src="./image/home.png"/>
+    <a class="weixin" href="../index.html">
+        <img src="../image/home.png"/>
     </a>
 
     <div class="logo">
