--- a/mobile/wi-pro.html
+++ b/mobile/wi-pro.html
@@ -34,7 +34,10 @@
 
 
         <div class="vip-made" style="font-size: 14px; margin: 10px;">
-            <p class="oneline" style="margin-bottom: 25px">"Wi-PRO"，是幸福创客和剑桥大学幸福研究院共同开发，为企业每一位员工提供的专业个性化服务，协助企业全方位地提高员工身心健康和幸福力，从而增加企业整体的工作效率，节省成本，保障企业和员工健康发展。无论是面向创业公司、中小企业，还是世界五百强公司，我们都将打破传统的昂贵收费模式，并以推陈出新的技术及智能化的专业服务，认真地为企业提供更全面、更精准、更便捷的合理化订制方案。
+            <p class="oneline" style="margin-bottom: 25px">"Wi-PRO"，是幸福创客和剑桥大学幸福研究院共同开发，为儿童族群、职场族群、长者族群，
+                提供专业综合心理服务，
+                全方位地提高身心健康和幸福力，解决心理需求。我们打破传统的昂贵收费模式，并以推陈出新的技术及智能化的专业服务，
+                认真地为大众提供更全面、更精准、更便捷的心理健康订制方案。
             </p>
             <p style="margin-top: 20px">我们团队成员负责的部分案例:</p>
             <!-- 各个使用案例 -->
@@ -133,7 +136,7 @@
             <div style="text-align: center">
 
             <a class="qiyeshiyong" style="text-decoration: none;" href="../user/enterprise/index.html">
-                <div class="my_button">企业用户登录</div>
+                <div class="my_button">用户登录</div>
             </a>
             <a class="qiyeshiyong" style="text-decoration: none;" href="mailto:service@winnovator.com">
                 <div  class="my_button">查询Wi-PRO</div>
@@ -141,7 +144,9 @@
             </a>
             </div>
 
-            <p class="oneline" style="margin-bottom: 25px">我们拥有世界级的心理科学专家和高素质的服务团队，建立了与国际保持同步的企业心理健康服务标准，透过先进的通讯、移动互联网和人工智能技术，致力为所有员工及其家属提供最专业丶最贴心的服务，协助企业维护员工的幸福与健康。
+            <p class="oneline" style="margin-bottom: 25px">我们拥有世界级的心理科学专家和高素质的服务团队，
+                建立了与国际保持同步的心理健康服务标准，透过先进的通讯、移动互联网和人工智能技术，
+                致力为不同人群及其家属提供最专业丶最贴心的服务，提升及发展大众的幸福与健康。
             </p>
 
 
