--- a/mobile/wi-pro.html
+++ b/mobile/wi-pro.html
@@ -34,10 +34,7 @@
 
 
         <div class="vip-made" style="font-size: 14px; margin: 10px;">
-            <p class="oneline" style="margin-bottom: 25px">"Wi-PRO"，是幸福创客和剑桥大学幸福研究院共同开发，为儿童族群、职场族群、长者族群，
-                提供专业综合心理服务，
-                全方位地提高身心健康和幸福力，解决心理需求。我们打破传统的昂贵收费模式，并以推陈出新的技术及智能化的专业服务，
-                认真地为大众提供更全面、更精准、更便捷的心理健康订制方案。
+            <p class="oneline" style="margin-bottom: 25px">"Wi-PRO"，是幸福创客和剑桥大学幸福研究院共同开发，为儿童族群、职场族群、长者族群，提供专业综合心理服务，全方位地提高身心健康和幸福力，解决心理需求。我们打破传统的昂贵收费模式，并以推陈出新的技术及智能化的专业服务，认真地为大众提供更全面、更精准、更便捷的心理健康订制方案。
             </p>
             <p style="margin-top: 20px">我们团队成员负责的部分案例:</p>
             <!-- 各个使用案例 -->
@@ -144,9 +141,7 @@
             </a>
             </div>
 
-            <p class="oneline" style="margin-bottom: 25px">我们拥有世界级的心理科学专家和高素质的服务团队，
-                建立了与国际保持同步的心理健康服务标准，透过先进的通讯、移动互联网和人工智能技术，
-                致力为不同人群及其家属提供最专业丶最贴心的服务，提升及发展大众的幸福与健康。
+            <p class="oneline" style="margin-bottom: 25px">我们拥有世界级的心理科学专家和高素质的服务团队，建立了与国际保持同步的心理健康服务标准，透过先进的通讯、移动互联网和人工智能技术，致力为不同人群及其家属提供最专业丶最贴心的服务，提升及发展大众的幸福与健康。
             </p>
 
 
