--- a/mobile/wi-pro.html
+++ b/mobile/wi-pro.html
@@ -34,7 +34,7 @@
 
 
         <div class="vip-made" style="font-size: 14px; margin: 10px;">
-            <p class="oneline" style="margin-bottom: 25px">"Wi-PRO"，是幸福创客和剑桥大学幸福研究院共同开发，为儿童、职场、长者，提供专业综合心理服务，全方位地提高身心健康和幸福力，解决心理需求。我们打破传统的昂贵收费模式，并以推陈出新的技术及智能化的专业服务，认真地为大众提供更全面、更精准、更便捷的心理健康订制方案。
+            <p class="oneline" style="margin-bottom: 25px">"Wi-PRO"，是幸福创客和剑桥大学幸福研究院共同开发，为儿童、职场、长者等不同人群，提供专业综合心理服务，全方位地提高身心健康和幸福力，解决心理需求。我们打破传统的昂贵收费模式，并以推陈出新的技术及智能化的专业服务，认真地为大众提供更全面、更精准、更便捷的心理健康订制方案。
             </p>
             <p style="margin-top: 20px">我们团队成员负责的部分案例:</p>
             <!-- 各个使用案例 -->
